--- a/howards/index.html
+++ b/howards/index.html
@@ -132,7 +132,7 @@
     </div>
 
     <div class="photos">
-        <h2> class="happy">Happy Customers!</h2>
+        <h2 class="happy"> Happy Customers!</h2>
         <img class="earl" src="images/earl.jpg" alt="earl" width="350">
         <img class="jim" src="images/jim.jpg" alt="jim" width="350">
         <img class="suzy" src="images/suzy.jpg" alt="suzy" width="350">
